Fix mobile navbar overlap when zoomed or on narrow viewports.
Reserve horizontal safe zones for side icon clusters so the centered title stays clear of gallery and slideshow controls.

--- a/css/pinchard.css
+++ b/css/pinchard.css
@@ -91,6 +91,8 @@ aside {
   border-bottom: 1px solid #e5e5e5;
   --nav-icon-size: 24px;
   --nav-icon-hit: 24px;
+  --nav-left-cluster: calc(16px + var(--nav-icon-hit) + 12px + var(--nav-icon-hit));
+  --nav-right-cluster: calc(16px + var(--nav-icon-hit));
   /*font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;*/
   font-family: "circular-std";
   -webkit-transition: all 0.35s;
@@ -123,7 +125,7 @@ aside {
     right: 0;
     top: 0;
     height: 49px;
-    padding: 11px 16px;
+    padding: 11px var(--nav-right-cluster) 11px var(--nav-left-cluster);
     display: grid;
     grid-template-columns: 1fr auto 1fr;
     align-items: center;
@@ -136,6 +138,7 @@ aside {
     user-select: none;
     pointer-events: none;
     z-index: 1;
+    box-sizing: border-box;
 }
 
 .navbar-default .title > a {
@@ -150,6 +153,10 @@ aside {
 .navbar-default .title .title-brand {
     grid-column: 2;
     justify-self: center;
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .navbar-default .nav-photo-prev {
@@ -196,7 +203,7 @@ aside {
 }
 
 .navbar-default .title .arrow.left {
-    margin-right: 16px;
+    margin-right: 8px;
     background-image: url(../images/arrow.svg);
     transform: rotate(90deg);
 }
@@ -207,7 +214,7 @@ aside {
 }
 
 .navbar-default .title .arrow.right {
-    margin-left: 16px;
+    margin-left: 8px;
     background-image: url(../images/arrow.svg);
     transform: rotate(-90deg);
 }
@@ -975,6 +982,10 @@ option {
     .navbar-default {
         --nav-icon-size: 32px;
         --nav-icon-hit: 44px;
+    }
+
+    .navbar-default .title {
+        font-size: clamp(13px, 4.2vw, 17px);
     }
 
     .viewer-timeline {
@@ -1960,11 +1971,6 @@ body.slideshow-page {
     padding-top: 0;
     background: #000;
     overflow: hidden;
-}
-
-body.slideshow-page .navbar-default .title {
-    padding-left: calc(16px + var(--nav-icon-hit) + 12px + var(--nav-icon-hit));
-    padding-right: calc(16px + var(--nav-icon-hit));
 }
 
 body.slideshow-page .slideshow-viewport {
